--- a/Yield_Curve_Model.ipynb
+++ b/Yield_Curve_Model.ipynb
@@ -6,7 +6,7 @@
       "name": "Yield Curve Model.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOEcj1DzIn7o33BdTTWwJGR",
+      "authorship_tag": "ABX9TyNG7y7+H/fDu6w8NM1xMlMr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -232,11 +232,8 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "def main():\n",
-        "    #Data source for UK Gilt Spot Rates: BB\n",
-        "    #Date: 29/01/2021\n",
         "    colHdr = ['Tenor','Yield Curve (UKT)']\n",
-        "    zrdata = [[0.083333,-0.052],[0.25,-0.024],[0.5,-0.005],[1,-0.136],[2,-0.112],[3,-0.084],[4,-0.076],[5,-0.031],[6,0.021],[7,0.11],[8,0.174],\n",
-        "              [9,0.269],[10,0.326],[12,0.43],[15,0.544],[20,0.834],[25,0.867],[30,0.896],[40,0.807],[50,0.72]]\n",
+        "    zrdata = [[],[],[]]\n",
         "\n",
         "    data=pd.DataFrame(zrdata, columns=colHdr)\n",
         "    tIdxName, rateColName = 'Tenor', 'Yield Curve (UKT)'\n",
